--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,23 @@
+* {
+    box-sizing: border-box;
+}
 
 .images {
     box-shadow: 3px 3px #dddddd;
     height: 200px;
 }
 
-#aboutpics {
+.aboutpics {
     box-shadow: 2px 2px #cccccc;
     height: 300px;
+}
+
+#margin-height {
+    margin-right: 20px;
+    height: 100px
+}
+h1 {
+    font-family: cursive;
 }
 
 h2 {
